--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dev-jobs",
   "version": "1.0.0",
-  "description": "",
+  "description": "Job seeking / posting app like linkedin.",
   "scripts": {
     "dev": "next dev -p 3004",
     "build": "next build",
