--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "micro-cors": "^0.1.1",
     "next": "^14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
