--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "cors": "^2.8.5",
     "micro-cors": "^0.1.1",
     "next": "^14.2.4",
