--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^20.14.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "mongoose": "^8.4.3",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
   },
