--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "^14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-interval-hook": "^1.1.4"
   }
 }
