--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-interval-hook": "^1.1.4"
+    "react-interval-hook": "^1.1.4",
+    "sweetalert2": "^11.12.1",
+    "sweetalert2-react-content": "^5.0.7"
   }
 }
